// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /internships Internships_200 1`] = `
Object {
  "data": Array [
    Object {
      "additional": null,
      "address": "TEST",
      "city": "Brest",
      "country": "France",
      "createdAt": Any<String>,
      "description": "Stage",
      "id": 1,
      "isLanguageCourse": true,
      "isValidated": false,
      "subject": "test",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /internships/:id Internships_200 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships ValidInternships_200 1`] = `
Object {
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_NotAnyDataUpdated 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_UpdateAllData 1`] = `
Object {
  "additional": "additional data",
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "id": Any<Number>,
  "isLanguageCourse": true,
  "isValidated": false,
  "subject": "test",
  "updatedAt": Any<String>,
}
`;
